--- a/docs/src/app/(docs)/react/components/select/demos/grouped/css-modules/index.module.css
+++ b/docs/src/app/(docs)/react/components/select/demos/grouped/css-modules/index.module.css
@@ -113,6 +113,7 @@
   max-height: var(--available-height);
   scroll-padding-block-start: 2.25rem;
   scroll-padding-block-end: 1.5rem;
+  isolation: isolate; /* Prevent overlap with iOS overlay scrollbars. */
 }
 
 .Group {
@@ -126,7 +127,6 @@
   z-index: 1;
   top: 0;
   padding: 0.5rem 0.5rem 0.25rem calc(0.625rem + 0.75rem + 0.5rem);
-  margin: 0 0.5rem 0 0; /* Prevent overlap with iOS overlay scrollbars. */
   font-size: 0.75rem;
   font-weight: 700;
   line-height: 1rem;
